FIX: some unexpected overflows
Algunos elementos tenian overflow en tamaños cercanos a 320px

--- a/style.sass
+++ b/style.sass
@@ -51,6 +51,7 @@ button:hover, input[type='submit']
         background-color: rgb(255, 255, 255)
         width: 60%
         max-width: 40em
+        min-width: 15em
         margin: auto
         padding: 2em
         margin-top: 7em
