--- a/styles/us.sass
+++ b/styles/us.sass
@@ -4,7 +4,7 @@
     margin-bottom: 3em
 
     &__sell
-        padding-inline: 6em
+        padding-inline: 4em
 
         &__h2
             font-family: Raleway
